@@ -1,5 +1,7 @@
 #include <stdio.h>
 #include <string.h>
+#include <unistd.h>
+#include <errno.h>
 #include <stdlib.h>
 #include <assert.h>
 #include <limits.h>		/* for NAME_MAX */
@@ -99,6 +101,14 @@ int log_plugins_init(const char *dirname, int argc, char **argv)
 {
 	int ret;
         
+	ret = access(dirname, F_OK);
+	if ( ret < 0 ) {
+		if ( errno == ENOENT )
+			return 0;
+		log(LOG_ERR, "can't access %s.\n", dirname);
+		return -1;
+	}
+
 	ret = plugin_load_from_dir(dirname, argc, argv, subscribe,
                                    unsubscribe);
 	if (ret < 0) {
